Got alignment correct on main nav

--- a/main.css
+++ b/main.css
@@ -22,6 +22,8 @@ header {
     height: 15vh;
     position: sticky; top: 0;
     font-size: 1.5rem;
+    display: flex;
+    align-items:end;
     /* border: 1px dashed blue; */
 }
 
@@ -49,17 +51,23 @@ footer {
 
 nav#main_nav {
     height: 100%; width: 100%;
-    padding-bottom: 10px;
     display: flex;
-    align-content: center; justify-content: center;
-    align-items: flex-end;
+    justify-content: center;
+    align-items: end;
     text-align: center;
     /* border: 1px dashed red; */
 }
 
+nav#main_nav ul {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    /* border: 1px dashed green; */
+}
+
 nav#main_nav li {
     display: inline;
-    padding: 5px; 
+    padding: 15px; 
     text-transform: uppercase;
     /* border: 1px dashed red; */
 }
